--- a/index.html
+++ b/index.html
@@ -79,28 +79,28 @@
           <h2 class="visually-hidden">Особливості</h2>
 
           <ul class="feature-list list">
-            <li class="features-list__item--antena">
+            <li class="features-list__item-antena">
               <h3 class="features-list__title">Увага до деталей</h3>
               <p class="features__description"
                 >Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
               </p>
             </li>
 
-            <li class="features-list__item--clock">
+            <li class="features-list__item-clock">
               <h3 class="features-list__title">Пунктуальність</h3>
               <p class="features__description"
                 >Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
               </p>
             </li>
 
-            <li class="features-list__item--diagram">
+            <li class="features-list__item-diagram">
               <h3 class="features-list__title">Планування</h3>
               <p class="features__description"
                 >Так само консультація з широким активом значною мірою зумовлює.</p
               >
             </li>
 
-            <li class="features-list__item--astronaut">
+            <li class="features-list__item-astronaut">
               <h3 class="features-list__title">Сучасні технології</h3>
 
               <p class="features__description"
@@ -114,7 +114,7 @@
       <!--GalLerry-->
       <section class="work">
         <div class="conteiner">
-          <h2 class="title">Чим ми займаємося</h2>
+          <h2 class="work__main-title">Чим ми займаємося</h2>
           <ul class="work__duty list">
             <li class="work__item">
               <div class="work__actions">
@@ -146,7 +146,7 @@
 
       <section class="team">
         <div class="conteiner"
-          ><h2 class="title"> Наша команда</h2>
+          ><h2 class="team__main-title"> Наша команда</h2>
           <ul class="team__list list">
             <li class="team__item item">
               <img
@@ -556,7 +556,7 @@
         </div>
           <div class="footer__submit">
             <p class="footer__submit-text">Підпишіться на розсилку</p>
-            <form class="footer-submit-form">
+            <form class="footer__submit-form">
               <label class="footer__submit-label" for="submit-mail"></label>
               <input class="footer__submit-input" type="email" name="submit-mail" id="submit-mail" placeholder="E-mail">
               <button class="footer__submit-btn" type="submit">
@@ -616,7 +616,8 @@
               </label>
               
             </div>
-            <button class="modal__form-btn" type="submit">Відправити</button>
+            <button class="
+            " type="submit">Відправити</button>
         </form>
       </div>
     </div>
