--- a/index.html
+++ b/index.html
@@ -615,8 +615,7 @@
               </label>
               
             </div>
-            <button class="
-            " type="submit">Відправити</button>
+            <button class="form-btn" type="submit">Відправити</button>
         </form>
       </div>
     </div>
